# pelican_publication_list

./: README.rst  pyproject.toml  setup.cfg
pelican_publications_list/: __init__.py
