[metadata]
name=pelican-publication-list
version=0.1.0
description=Basic plugin to add a list of publications to the environment.
author=Jonathan Robey
author-email=class4kayaker@gmail.com
license='MIT'
long_description=file: README.rst
url='https://github.com/class4kayaker/pelican_publication_list'
classifiers=
    Development Status :: 4 - Beta,
    Framework :: Pelican :: Plugins,
    No Upload

[options]
zip_safe=True
include_package_data=True
packages=find:
install_requires=
    pelican
    bibparser
    citeproc-py

[options.packages.find]
exclude=
    tests

[bdist_wheel]
